# sayable

./: CHANGELOG.md  LICENSE  README.md  flake.nix  sayable.cabal
.github/workflows/: ci.yml
Text/: Sayable.hs
_eng_/: dev.eng  doc.eng
test/: Helpers.hs  Test.hs
