cabal-version:      2.4
name:               sayable
version:            1.2.6.0
synopsis: Construction of context-adjusted pretty output
description:
   .
   This package provides a set of data structures, classes and operators that
   facilitate the construction of a Prettyprinter Doc object.  The difference
   between this an Prettyprinter is:
   .
   * Additional "saytag" parameter that can be used to control the Doc rendering.
   .
   * Brevity of syntax (using operators) designed to enhance conversion of
     arguments and readability of messages and conversion

license:            ISC
license-file:       LICENSE
author:             Kevin Quick
maintainer:         kquick@galois.com
copyright:          Galois Inc., 2023
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with:        GHC == 9.12
                  , GHC == 9.10
                  , GHC == 9.8
                  , GHC == 9.6
                  , GHC == 9.4
                  , GHC == 9.2
                  , GHC == 9.0
                  , GHC == 8.10.7
                  , GHC == 8.8
                  -- Note: GHC 8.6.5 requires prettyprinter < 1.7 which
                  -- uses a different namespace, so the origin horizon
                  -- for sayable is GHC 8.8.

source-repository head
  type: git
  location: https://github.com/kquick/sayable

common bldspec
  ghc-options:  -Wall
                -Wcompat
                -Wincomplete-uni-patterns
                -Wsimplifiable-class-constraints
                -Wpartial-fields
                -fhide-source-paths
                -O2
                -flate-specialise
                -fspecialise-aggressively

library
    import:           bldspec
    hs-source-dirs:   .
    default-language: Haskell2010
    exposed-modules:  Text.Sayable
    build-depends:    base >= 4.13 && < 4.22
                    , containers
                    , exceptions
                    , bytestring
                    , text
                    , template-haskell
                    , th-abstraction
                    , prettyprinter >= 1.7 && < 1.8

test-suite sayableTests
    import:           bldspec
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:    Helpers
    build-depends:    base
                    , hspec
                    , prettyprinter
                    , sayable
                    , tasty >= 1.4 && < 1.6
                    , tasty-ant-xml >= 1.1 && < 1.2
                    , tasty-hspec >= 1.2 && < 1.3
                    , template-haskell
                    , text
